change all image from qiniu to note-db

--- a/content/blog/2019-08-05-nd8gh3.md
+++ b/content/blog/2019-08-05-nd8gh3.md
@@ -9,7 +9,7 @@ published: true
 
 在 bioconductor 的官网里面可以查找到 "**OrgDb**" 的包大约有 19 个，基本上跨越了我们生物信息分析中最常用的物种啦！
 
-![BiocViews.png](http://qiniu.bioitee.com/yuque/0/2019/png/126032/1565144319223-0467d823-adee-4884-8b50-ddea793b0a07.png#align=left&display=inline&height=887&name=BiocViews.png&originHeight=887&originWidth=634&size=86638&status=done&width=634)<br />完整链接：[`http://bioconductor.org/packages/release/BiocViews.html#___OrgDb`](http://bioconductor.org/packages/release/BiocViews.html#___OrgDb)
+![BiocViews.png](https://note-db.oss-cn-shenzhen.aliyuncs.com/yuque/0/2019/png/126032/1565144319223-0467d823-adee-4884-8b50-ddea793b0a07.png#align=left&display=inline&height=887&name=BiocViews.png&originHeight=887&originWidth=634&size=86638&status=done&width=634)<br />完整链接：[`http://bioconductor.org/packages/release/BiocViews.html#___OrgDb`](http://bioconductor.org/packages/release/BiocViews.html#___OrgDb)
 
 R 安装示例：
 ```r
